--- a/README
+++ b/README
@@ -43,6 +43,12 @@ INSTALLATION
 
     Restart your webserver
 
+CONFIGURATION
+    Reads from the %ServiceBusinessHours as used by RT::Extension::SLA.
+
+    At this time, reads only from the Default setting. Could learn to read
+    from other configurations with minimal Argument changing.
+
 BUGS AND LIMITATIONS
     Please report any bugs or feature requests to
     "bug-rt-condition-untouchedinbusinesshours@rt.cpan.org", or through the
